--- a/ch04_aim2.Rmd
+++ b/ch04_aim2.Rmd
@@ -22,6 +22,15 @@ csl: "/home/jflournoy/Rlibs/probly/bib/apa-old-doi-prefix.csl"
 knitr::opts_chunk$set(fig.path = 'figures/', echo = F, warning = F, error = F, message = F)
 library(probly)
 load('rda/fsmi-cfa.rda')
+print_lrt_test_stats <- function(anlrt, result_row = 2, p_sigdig = 3){
+    N <- eval(parse(text = paste0('lavaan::nobs(',dimnames(anlrt)[[1]][1], ')')))
+    sprintf(paste0('N = %d, \\Delta\\chi^2[',
+                   ifelse(round(anlrt[result_row,'Df diff'],3)==1, '%0.0f', '%0.2f'),
+                   '] = %0.1f, p = %0.', p_sigdig, 'f'),
+            N, anlrt[result_row,'Df diff'], 
+            anlrt[result_row,'Chisq diff'], 
+            anlrt[result_row,'Pr(>Chisq)'])
+}
 ggplot2::theme_set(ggplot2::theme_minimal())
 
 sample_abbreviation_note <- 'FCA: foster-care-involved adolescents; CA: community adolescents; CSYA: college students; CSYA-O: college students, online.'
@@ -135,7 +144,7 @@ Associations between target motive variables and outcomes were estimated both wi
 Also, in the case of K-SRQ variables, sensitivity to the inclusion of highly correlated subscales was also tested.
 For example, if the Sexual Relationships variable was included as the focal independent variable, the Admiration and Sociability variables were added as covariates.
 
-Interpretation of associations (both with self-report scales, and when considering the SPLT variables) with self report behavior is based on the sign of the focal motive variable coefficient, and on the $\chi^2$ difference test ($\alpha < .005$) between a model including the focal motive variable and covariates, and the same model with the motive variable coefficient fixed to 0.
+Interpretation of associations (both with self-report scales, and when considering the SPLT variables) with self report behavior is based on the sign of the focal motive variable coefficient, and on the $\chi^2$ difference test ($\alpha = .005$) between a model including the focal motive variable and covariates, and the same model with the motive variable coefficient fixed to 0.
 To examine sensitivity to inclusion of the UPPS-P scales, comparison was between the model with all variables (motive, UPPS-P Sensation Seeking, and Positive and Negative Urgency), and the same model with the motive coefficient fixed to 0.
 That is, the test examined fit decrease due to excluding the relation between the outcome and motive variable.
 Sensitivity to the addition of K-SRQ subscales tested models with the zero-coefficient constraint set on the added variable, with examination of size and sign change of the focal motive variable coefficient.
@@ -727,7 +736,7 @@ print(ltr_fsmi)
 
 \begin{figure}
 \centering
-\captionsetup{width=5.875in}
+\captionsetup{width=3.25in}
 \includegraphics{figures/ltrfsmi-1.pdf}
 \caption[FSMI Mate-seeking scale and long-term relationship status]{FSMI Mate-seeking scale and long-term relationship status. LTR = Long term relationship, indicating that the participant reported they were in a such a relationship. Values on X axis are binned means of six items.}
 \label{fig:ltrfsmi}
@@ -735,32 +744,123 @@ print(ltr_fsmi)
 
 ### Number of partners
 
+The analyses in the next several sections test whether sexual behavior is associated with the FSMI Mate-seeking, or K-SRQ Sexual Relationships variables.
+Initial models include both the focal motive variable and gender, which are compared to models in which the coefficient for the motive variable is fixed to zero.
+Significant decrease in fit is taken as evidence for an association between the motive variable and the behavioral outcome.
+
+In the second step, the initial model is augmented by adding UPPS-P Sensation Seeking, Positive Urgency, and Negative Urgency, with the same constraint of the focal motive variable tested.
+Significant difference in fit here indicates that the focal motive is associated with the outcome even when conditioning on (or perhaps because of this conditioning) the UPPS-P impulsivity and sensation-seeking variables.
+
+For the K-SRQ, an additional test is made by including the Admiration variable in the regression.
+Significant decrease in fit when the coefficient for this variable is fixed to zero indicates that it has an association with the behavioral outcome over and above the variance it shares with the Sexual Relationships variable.
+The sign of the coefficients between the unconstrained and constrained model will also be examined.
+
 #### FSMI Mate-seeking
 
-Constraining the coefficient of the FSMI Mate-seeking latent variable to 0 in a model that regressed number of sexual partners on this variable and gender did not result in significantly worse fit for either the unpartnered ($`r print_lrt_test_stats(fsmi_num_partners_lrt)`$) or full sample ($`r print_lrt_test_stats(fsmi_num_partners_all_lrt)`$).
-The coefficient for both regressions were, as expected, positive.
+Constraining the coefficient of the FSMI Mate-seeking latent variable to zero in a model that regressed number of sexual partners on this variable and gender did not result in significantly worse fit when examining data from unpartnered college students ($`r print_lrt_test_stats(fsmi_num_partners_lrt, 2, 3)`$).
+The coefficient for the effect of Mate-seeking on number of partneres was, however, positive.
 
-Next we compared a model which added the three UPPS-P variables (Sensation Seeking, Positive and Negative Urgency) to a model which excluded them from the regression ordinal regression of the number of partners variable.
-This resulted in significantly worse fit ($`r print_lrt_test_stats(uppsp_fsmi_partners_lrt, 2, 4)`$).
-Fit was not significantly reduced by constraining the Mate-seeking coefficient to 0 in this model ($`r print_lrt_test_stats(uppsp_fsmi_partners_lrt2, 2, 4)`$).
-The associations between the three UPPS-P variables and number of partners were all positive, whether or not FSMI Mate-seeking was included, which also had a positive coefficient.
+Next, we added to the above model the three UPPS-P variables (Sensation Seeking, Positive and Negative Urgency) and then compared this to a model that fixed the Mate-seeking coefficient to 0.
+This did not result in a significantly worse fit ($`r print_lrt_test_stats(uppsp_fsmi_partners_lrt2, 2, 2)`$).
+The coefficient for the Mate-seeking variable, when included, was positive.
 
 #### K-SRQ Sexual Relationships
 
+In a model with the K-SRQ Sexual Relationships (SR) and gender predicting number of partners, constraining the coefficient for SR to zero resulted in significantly worse fit both in the unpartnered college student sample ($`r print_lrt_test_stats(ksrq_num_partners_null_lrt, 2, 4)`$), and in the the full (college and adolescent) sample (which also includes age as a covariate; $`r print_lrt_test_stats(ksrq_num_partners_null_all_lrt, 2, 6)`$).
+In both cases, the coefficient for SR is positive, indicating that those participants with higher levels on SR also report more sexual partners.
 
+Comparing models with and without the K-SRQ Admiration variable included in the regression did not result in significantly worse fit in the unpartnered college sample ($`r print_lrt_test_stats(ksrq_num_partners_admrtn_lrt, 2, 2)`$), but did significantly reduce fit in the full samples ($`r print_lrt_test_stats(ksrq_num_partners_admrtn_all_lrt, 2, 5)`$).
+In both cases, the coefficient for SR was positive and for Admiration was negative.
+This indicates that for a given level on SR, a participant with a higher level of Admiration would be expected to have fewer partners.
+Models that included K-SRQ Sociability did not converge, probably because of the very high correlation with the SR factor.
+
+Removing SR from a regression that also included the three UPPS-P variables did not result in worse fit in the unpartnered college student sample ($`r print_lrt_test_stats(uppsp_ksrq_num_partners_lrt)`$), but did significantly reduce fit in the combined sample ($`r print_lrt_test_stats(uppsp_ksrq_num_partners_all_lrt, 2, 6)`$).
+The coefficient for SR in these models was also positive.
+
+### Number of sexual encounters
+
+#### FSMI Mate-seeking
+
+Comparing models with and without the FSMI Mate-seeking regression coefficient constrained to zero showed non-significant mis-fit in the unpartnered college sample ($`r print_lrt_test_stats(fsmi_sfreq_lrt, 2, 2)`$).
+In the unconstrained model, the coefficient was negative and very close to zero.
+Adding UPPS-P covariates to the model, and again testing whether constraining the Mate-seeking coefficient to zero also resulted in non-significant reduction in fit ($`r print_lrt_test_stats(uppsp_fsmi_sfreq_lrt2, 2, 2)`$), and in the unconstrained model the Mate-seeking coefficient remained negative.
+
+#### K-SRQ Sexual Relationships
+
+The test of K-SRQ SR showed non-significant reduction in fit when constraining its association with number of sexual encounters to zero in the unpartnered college sample ($`r print_lrt_test_stats(ksrq_sex_freq_null_lrt,2,3)`$), but significant reduction in fit in the full sample ($`r print_lrt_test_stats(ksrq_sex_freq_null_all_lrt,2,6)`$).
+The coefficient for the SR variable in both cases was positive, indicating that those higher on SR tend to report having more sexual encounters (note that the coefficients for partnered and unpartnered college students were also both positive when considered separately).
+
+Considering the models with and without the Admiration covaraite showed non-significant difference in fit for the unpartnered college student sample ($`r print_lrt_test_stats(ksrq_sex_freq_admrtn_lrt,2,2)`$), as well as the full samples ($`r print_lrt_test_stats(ksrq_sex_freq_admrtn_all_lrt,2,3)`$).
+As was the case with number of partners, the coefficients for the Admiration variable were negative (while SR remained positive), indicating that, given the same level of SR, those higher in Admiration tended to report fewer sexual encounters.
+
+Not accounting for the association between number of sexual encounters and SR in a model that also included the three UPPS-P variables did not result in significant difference in fit in the unpartnered college sample ($`r print_lrt_test_stats(uppsp_ksrq_sex_freq_lrt,2,2)`$), but did result in a significant reduction in fit in the full sample ($`r print_lrt_test_stats(uppsp_ksrq_sex_freq_all_lrt,2,3)`$).
+In both cases the coefficient for SR was positive.
+
+### Safe sex practices
+
+#### FSMI Mate-seeking
+
+The fit difference tests for the effect of Mate-seeking on frequency of safe sex practices was not significant for either the unpartnered college sample ($`r print_lrt_test_stats(fsmi_uprot_lrt,2,2)`$) or for the full college sample ($`r print_lrt_test_stats(fsmi_uprot_all_lrt,2,2)`$).
+The coefficients in both cases were very close to zero.
+Including the three UPPS-P variables as covariates also resulted in no significant fit decrease when constraining the effect of Mate-seeking to be zero in the unpartnered ($`r print_lrt_test_stats(uppsp_fsmi_uprot_lrt2,2,2)`$) and combined college student sample ($`r print_lrt_test_stats(uppsp_fsmi_uprot_all_lrt2,2,2)`$).
+
+#### K-SRQ Sexual Relationships
+
+Neither the unpartnered college student sample ($`r print_lrt_test_stats(ksrq_use_protection_null_lrt,2,2)`$), nor the full sample 
+($`r print_lrt_test_stats(ksrq_use_protection_null_all_lrt,2,2)`$) showed significant decrease in fit when constraining the effect of the SR variable on frequency of safe sex practice to zero.
+The coefficient in both cases was postive, indicating that those higher on SR also tend to report more frequent practice of safe sex.
+
+In a model that also included Admiration as a covariate, removing this variable from the regression did not reduce fit significantly for ether unpartnered college students ($`r print_lrt_test_stats(ksrq_use_protection_admrtn_lrt,2,2)`$) or the full sample ($`r print_lrt_test_stats(ksrq_use_protection_admrtn_all_lrt,2,2)`$).
+The coefficients were positive for both SR and Admiration in these models, though close to zero.
+Models with the three UPPS-P variables included demonstrated the same pattern for the unpartnered college students ($`r print_lrt_test_stats(uppsp_ksrq_use_protection_lrt,2,2)`$) and combined sample ($`r print_lrt_test_stats(uppsp_ksrq_use_protection_all_lrt,2,2)`$).
+
+### Number of drinking days
+
+The following models test whether drinking behavior is associated with the FSMI Status, or K-SRQ Admiration variables.
+As above, initial models include both the focal motive variable and gender, which are compared to models in which the coefficient for the motive variable is fixed to zero.
+Significant decrease in fit is taken as evidence for an association between the motive variable and the behavioral outcome.
+
+In the next step, the initial model is augmented by adding UPPS-P Sensation Seeking, Positive Urgency, and Negative Urgency, with the same constraint of the focal motive variable tested.
+Significant difference in fit here indicates that the focal motive is associated with the outcome even when conditioning on (or perhaps because of this conditioning) the UPPS-P impulsivity and sensation-seeking variables.
+
+For the K-SRQ, an additional test is made by including the Sociability variable in the regression.
+Significant decrease in fit when the coefficient for this variable is fixed to zero indicates that it has an association with the behavioral outcome over and above the variance it shares with the Admiration variable.
+The coefficients between the unconstrained and constrained model will also be examined.
+
+#### FSMI Status
+
+In the college sample, constraining FSMI Status to have no association with number of drinking days did not significantly reduce model fit ($`r print_lrt_test_stats(fsmi_alcdays_lrt,2,2)`$), with a coefficient for the effect, when it was freed, close to zero.
+This remained the case whether or not the UPPS-P variables were included in the model ($`r print_lrt_test_stats(uppsp_fsmi_alcdays_lrt2,2,2)`$).
+
+#### K-SRQ Admiration
+
+Constraining the Admiration variable to zero in the regression of number of drinking days in the college sample resulted in a significant reduction in fit ($`r print_lrt_test_stats(ksrq_alc_days_null_lrt,2,4)`$).
+This was also the case for the full sample ($`r print_lrt_test_stats(ksrq_alc_days_null_all_lrt,2,5)`$).
+In both cases, the freed coefficient was positive, indicating that those with higher values on Admiration also reported more days where they had at least one drink (in the past 30 days).
+
+The exclusion of the Sociability variable also led to significant decreases in fit for both the college sample ($`r print_lrt_test_stats(ksrq_alc_days_admrtn_lrt,2,4)`$), as well as the full sample ($`r print_lrt_test_stats(ksrq_alc_days_admrtn_all_lrt,2,6)`$).
+In both cases, the freed coefficient for Sociability was positive, while the coefficient for Admiration became negative (with increased standard error).
+This indicates that participants reporting higher sociability also tend to report more drinking days, and that for a given level of Sociability, higher Admiration may be associated with fewer drinking days.
+
+When tested in a model that included the three UPPS-P variables, constraining the Admiration effect on drinking days to zero did not reduce fit in the college sample ($`r print_lrt_test_stats(uppsp_ksrq_alc_days_lrt,2,2)`$) or the combined sample ($`r print_lrt_test_stats(uppsp_ksrq_alc_days_all_lrt,2,2)`$).
+The coefficient for the association between Admiration and drinking days remained postive in these models.
+
+### Number of heavy-drinking days
+
+#### FSMI Status
+
+We did not reject the null of no association between FSMI Status and number of heavy drinking days in either the initial model ($`r print_lrt_test_stats(fsmi_alc_5drnk_lrt,2,2)`$) or the model including the UPPS-P variables ($`r print_lrt_test_stats(uppsp_fsmi_alc5drk_lrt2,2,2)`$).
+The coefficient of the association was positive in the first case, and close to zero (very slightly negative) in the UPPS-P model.
+
+#### K-SRQ Admiration
+
+The results for the the K-SRQ Admiration association with number of _heavy_ drinking days were much the same as those for number of days having consumed any alcohol at all.
+There was a significant decrease in fit when the coefficient for Admiration was set to zero for both the college ($`r print_lrt_test_stats(ksrq_alc_5drnk_null_lrt,2,4)`$) and full ($`r print_lrt_test_stats(ksrq_alc_5drnk_null_all_lrt,2,5)`$) samples, with positive coefficients for the freed parameters.
+Including the association with Sociability resulted in significant fit differences for both the college ($`r print_lrt_test_stats(ksrq_alc_5drnk_admrtn_lrt,2,3)`$) and full sample ($`r print_lrt_test_stats(ksrq_alc_5drnk_admrtn_all_lrt,2,6)`$). In both cases, freeing the Sociability coefficient resulted in a negative Admiration coefficient with smaller magnitude than the models excluding Sociability.
+In addition, in models including the UPPS-P variables, the coefficient for Admiration could be constrained to zero without significant fit difference in the college ($`r print_lrt_test_stats(uppsp_ksrq_alc_5drnk_lrt,2,2)`$) and combined sample ($`r print_lrt_test_stats(uppsp_ksrq_alc_5drnk_all_lrt,2,2)`$).
 
 ## SPLT relation to outcomes
 
-This section may be largely perfunctory if in fact the task is not sensitive to individual differences in motives.
-
-- Contrasted model parameters and mean optimal behavior as regressors for 
-  - Safe sex practice
-    - "In the last 6 months, what percentage of the time when you've had sexual relations (oral, vaginal or anal) did you USE safe sex practices to prevent sexually transmitted diseases - condoms, blood tests, dental dams, etc.)"
-  - Substance use and sex
-    - "Did you drink alcohol or use drugs before you had sexual intercourse the last time you had sex?"
-  - Alcohol use
-    - "In the past 30 days, on how many days did you have at least one drink of alcohol?"
-    - "In the past 30 days, on how many days did you have 5 or more drinks of alcohol in a row, that is, within a couple hours?"
 
 
 # Discussion, aim 2
@@ -768,6 +868,7 @@ This section may be largely perfunctory if in fact the task is not sensitive to 
 - Scale validation
   - Inter-scale correlations
     - FSMI Mate-seeking is the only scale that asks questions about actively seeking out new romantic or sexual partners. Interestingly, in this sample of University of Oregon undergraduates, this does not seem to be related very strongly to the socio-sexual reward propensity as measured by the K-SRQ Sexual Relationships scale, and is only very weakly associated with more general reward sensitivty as measured by Sensation Seeking.
+    - Interpretting the meaning of the K-SRQ variables is made difficult by the extremely high correlations among the factors. 
 - Cross sectional
   - That the data are cross-sectional, and are sampled from different populations, should strongly qualify any strong inferences regarding age associations. 
   - For example, there is very robust, longitudinal evidence for a similar trend in males and females of increasing, decelerating development in sensation seeking over the age span considered here [@shulman2015].
@@ -783,7 +884,7 @@ This section may be largely perfunctory if in fact the task is not sensitive to 
   - Although both sources of information arise from self report, the health-related questions ask primarily about easily countable, and reasonably memorable experiences.
   - These behaviors were assessed _after_ the self-report trait questionnaires.
   - We found that the self-report scales were, in many cases, associated with relevant behaviors.
-  - These findings, along with correlations between scales, provide some assurance of the validity of the instruments as measures of the named constructs.\
+  - These findings, along with correlations between scales, provide some assurance of the validity of the instruments as measures of the named constructs.
   - In other words, we are assured that those participants who were not in long-term relationships, and who reported having more sexual partners in the last six months, also tended to have higher scores on the FSMI Mate-seeking and K-SRQ Sexual Relationships questionnaires.
   - Similarly, because considerable literature has linked adolescent and young adult popularity and status to alcohol consumption (CITE CITE CITE), it is reassuring the find that participants who report more days having had at least one drink, or having had 5 or more drinks in a session, also tend to score higher on the FSMI Status and K-SRQ Admiration scales.
 - SPLT relation to outcomes
@@ -793,7 +894,7 @@ This section may be largely perfunctory if in fact the task is not sensitive to 
   - There is also some evidence that behavioral outcomes may be related to motives as characterized by these instruments.
   - However, there is also evidence of considerable overlap between the variance in different scales.
   - This overlap is likely due to the various levels of description on which they opperate.
-  - For example, the FSMI Mate-seeking and Status items seem to ask about social goals (finding a romantic partner, gaining status), whereas the K-SRQ Sexual Relationships and Admiration items ask the participant to consider their enjoyment of behaviors (flirting, receiving recognition) that are clearly related to those goals but are neither necessary nor sufficient for them.
-  - The items on the UPPS-P are much more general, focusing on characterizing decision independently of the motivations behind them, and remaining agnostic about any kind of taxonomy of behavior. "I would like to go scuba diving," is just as meaningful an item for measuring Sensation Seeking as ". I like sports and games in which you have to choose your next move very quickly," or, "I quite enjoy taking risks." Even so, (IT DOES GOOD IT DOES BAD).
+  - For example, the FSMI Mate-seeking and Status items seem to ask about social goals (finding a romantic partner, gaining status), whereas the K-SRQ Sexual Relationships and Admiration items ask the participant to consider their enjoyment of behaviors (flirting, receiving recognition) that are clearly related to those goals but are neither necessary nor sufficient for them. One exception is the Sociability subscale, which asks about attending social events, parties, and joining clubs. Unlike the other subscales in the K-SRQ, one could argue that variance on these items may be caused in part by a preferrence for a particular strategy for receiving admiration or status, in addition to being reinforced by socializing, per se.
+  - The items on the UPPS-P are much more general, focusing on characterizing decision independently of the motivations behind them, and remaining agnostic about any kind of taxonomy of behavior. "I would like to go scuba diving," is just as meaningful an item for measuring Sensation Seeking as ". I like sports and games in which you have to choose your next move very quickly," or, "I quite enjoy taking risks." The cases that where associations were shown between the more focal motive variables and the behavior outcomes when controlling for UPPS-P subscales provide some evidence for the usefulness of taking into account this level of specificity. Though it is beyond the scope of this investigation, a more full exploration of the relation between these constructs, and description of their hierarchy, is certainly possible in these data, or in future studies.
 
 ------
